--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
-		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NIPS 2023</b>! See you in USA!  </li>
+		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NeurIPS 2023</b>! See you in USA!  </li>
 		<li> <b> <font color="#FF0000">[2023.07]</font> </b> One paper is accepted by <b>ASE 2023</b> NIER track! </li>
 		<li> <b> <font color="#FF0000">[2023.03]</font> </b> I did a presentation at China University of Geosciences, Beijing, titled <b>Developments of Reliable and Safe RL Systems</b>. </li> 
 		<li> <b> <font color="#FF0000">[2023.02]</font> </b> I will be a Ph.D. student in the computer science department of the <b> University of Virginia </b> in 2023 fall, working closely with Prof. <a href="https://tianhao.wang/" target="_blank">Tianhao Wang</a>. </li>
@@ -156,6 +156,12 @@
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
             <ul>
+	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+		Chao Li, <b>Chen Gong</b>, Qiang He, Xinwen Hou, “Keep Various Trajectories: Promoting Exploration of Ensemble Policies in Continuous Control”,
+                <i>37th Conference on Neural Information Processing Systems </i> (<b>NeurIPS</b>),
+                2023.
+		[<a href="https://arxiv.org/abs/2310.11138" target="_blank">Paper</a>]
+            </p></li>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Bowen Xu, Thanh-Dat Nguyen, Thanh Le-Cong, Thong Hoang, Jiakun Liu, Kisub Kim, <b>Chen Gong</b>, Changan Niu, Chenyu Wang, Bach Le, David Lo, “Are We Ready to Embrace Generative AI for Software Q&A?”,
                 <i>38th IEEE/ACM International Conference on Automated Software Engineering </i> (<b>ASE</b>), NIER track,
