--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     <li> 2022, ACSAC Artifacts Evaluation Committee </li>
 		    <li> 2023, CDC Reviewer </li>
 		    <li> IEEE Transactions on Industrial Electronics Reviewer </li>
-		    <li> ACM Transactions on Intelligent Systems and Technology </li>
+		    <li> ACM Transactions on Intelligent Systems and Technology Reviewer </li>
                 </ul>
                     
                 <!-- map -->   
