--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2023.12]</font> </b> One paper is accepted by <b>AAMAS 2024</b>! See you in New Zealand. </li>
 		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NeurIPS 2023</b>! See you in USA!  </li>
 		<li> <b> <font color="#FF0000">[2023.07]</font> </b> One paper is accepted by <b>ASE 2023</b> NIER track! </li>
 		<li> <b> <font color="#FF0000">[2023.03]</font> </b> I did a presentation at China University of Geosciences, Beijing, titled <b>Developments of Reliable and Safe RL Systems</b>. </li> 
@@ -156,6 +157,12 @@
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
             <ul>
+	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+		Xianjie Zhang, Jiahao Sun, <b>Chen Gong</b>, Kai Wang, Yifei Cao, Hao Chen and Yu Liu, “Mutual Information as Intrinsic Reward of Reinforcement Learning Agents for On-demand Ride Pooling”,
+                <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
+                2024.
+		<!--[<a href="https://arxiv.org/abs/2310.11138" target="_blank">Paper</a>] -->
+            </p></li>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Chao Li, <b>Chen Gong</b>, Qiang He, Xinwen Hou, “Keep Various Trajectories: Promoting Exploration of Ensemble Policies in Continuous Control”,
                 <i>37th Conference on Neural Information Processing Systems </i> (<b>NeurIPS</b>),
