--- a/index.html
+++ b/index.html
@@ -153,16 +153,23 @@
             </A>
 	    "*" means equal contribution.
 	    <br>
-		
+
 	    <b><font color="red">2023</font></b>
 	    <font size="3">
             <ul>
-	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
+            <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Xianjie Zhang, Jiahao Sun, <b>Chen Gong</b>, Kai Wang, Yifei Cao, Hao Chen and Yu Liu, “Mutual Information as Intrinsic Reward of Reinforcement Learning Agents for On-demand Ride Pooling”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2024.
 		<!--[<a href="https://arxiv.org/abs/2310.11138" target="_blank">Paper</a>] -->
             </p></li>
+		    
+	    </ul>
+		
+	    <b><font color="red">2023</font></b>
+	    <font size="3">
+            <ul>
+	    
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Chao Li, <b>Chen Gong</b>, Qiang He, Xinwen Hou, “Keep Various Trajectories: Promoting Exploration of Ensemble Policies in Continuous Control”,
                 <i>37th Conference on Neural Information Processing Systems </i> (<b>NeurIPS</b>),
