--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		Xianjie Zhang, Jiahao Sun, <b>Chen Gong</b>, Kai Wang, Yifei Cao, Hao Chen and Yu Liu, “Mutual Information as Intrinsic Reward of Reinforcement Learning Agents for On-demand Ride Pooling”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2024.
-		<!--[<a href="https://arxiv.org/abs/2310.11138" target="_blank">Paper</a>] -->
+		[<a href="https://arxiv.org/abs/2312.15195" target="_blank">Paper</a>]
             </p></li>
 		    
 	    </ul>
