--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <h2>Services</h2>
                 </A>
                 <ul>
-		    <li> 2024, ICME PC Member </li>
+		    <li> 2024, ICME PC Member, CCS Shadow Reviewer </li>
 		    <li> 2023, CDC Reviewer </li>
                     <li> 2022, ACSAC Artifacts Evaluation Committee </li>
 		    <li> IEEE Transactions on Industrial Electronics Reviewer </li>
