--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
 	    <b><font color="red">2024</font></b>
 	    <font size="3">
             <ul>
+
+	   <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> <b>Chen Gong</b>*,Zhou Yang*, Yunpeng Bai, Junda He, Jieke Shi, Kecen Li, Arunesh Sinha, Bowen Xu, Xinwen Hou, David Lo, Tianhao Wang.
+                “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
+		<i>45th IEEE Symposium on Security and Privacy</i> (<b>S&P</b>),
+		2024.
+                [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
+                </li></span>
+            </p>    
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Xianjie Zhang, Jiahao Sun, <b>Chen Gong</b>, Kai Wang, Yifei Cao, Hao Chen and Yu Liu, “Mutual Information as Intrinsic Reward of Reinforcement Learning Agents for On-demand Ride Pooling”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
@@ -306,14 +316,6 @@
 		[<a href="https://arxiv.org/pdf/2211.12123.pdf" target="_blank">Arxiv</a>]
                 </li></span>
                 </p>  
-		    
-		<p style="text-indent: -1.6rem;margin-left: 0rem;">
-                <span><li> <b>Chen Gong</b>*,Zhou Yang, Yunpeng Bai, Junda He, Jieke Shi, Arunesh Sinha, Bowen Xu, Xinwen Hou, Guoliang Fan, David Lo.
-                “Mind Your Data! Hiding Backdoors in Offline Reinforcement Learning Datasets”. under review IEEE Transaction on Software Engineering.
-                [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
-		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>] (Major revision)
-                </li></span>
-                </p>    
 		
              	<p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*, Qiang He*, Yunpeng Bai*, Zhou Yang, Xiaoyu Chen, Xinwen Hou, Xianjie Zhang, Yu Liu, Guoliang Fan.
