--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>S&P 2024</b>! See you in San Francisco. </li>
 		<li> <b> <font color="#FF0000">[2023.12]</font> </b> One paper is accepted by <b>AAMAS 2024</b>! See you in New Zealand. </li>
 		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NeurIPS 2023</b>! See you in USA!  </li>
 		<li> <b> <font color="#FF0000">[2023.07]</font> </b> One paper is accepted by <b>ASE 2023</b> NIER track! </li>
@@ -163,7 +164,7 @@
                 “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
 		<i>45th IEEE Symposium on Security and Privacy</i> (<b>S&P</b>),
 		2024.
-                [<a href="https://arxiv.org/pdf/2210.04688.pdf" target="_blank">Arxiv</a>]
+                [<a href="https://arxiv.org/abs/2210.04688" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
                 </li></span>
             </p>    
