--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 	    </A>
 		I'm hourned to (co-)supervise the following students:
 		<ul>
-		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024 (Major revision) </li>
+		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024 (Major revision), S&P 2024. </li>
                 </ul>
             
 		    
