--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
 		<i>45th IEEE Symposium on Security and Privacy</i> (<b>S&P</b>),
 		2024.
+		[Acceptance Rate in Cycle 3: 70/601=11.6%]
                 [<a href="https://arxiv.org/abs/2210.04688" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
                 </li></span>
