--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	   <p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*, Zhou Yang*, Yunpeng Bai, Junda He, Jieke Shi, Kecen Li, Arunesh Sinha, Bowen Xu, Xinwen Hou, David Lo, Tianhao Wang.
                 “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
-		<i>45th IEEE Symposium on Security and Privacy</i> (<b>S&P</b>),
+		<i>45th IEEE Symposium on Security and Privacy</i> (<b>IEEE S&P</b>),
 		2024.
 		[Acceptance Rate in Cycle 3: 70/601=11.6%]
                 [<a href="https://arxiv.org/abs/2210.04688" target="_blank">Arxiv</a>]
