--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
-		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>S&P 2024</b>! See you in San Francisco. </li>
+		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>IEEE S&P 2024</b>! See you in San Francisco. </li>
 		<li> <b> <font color="#FF0000">[2023.12]</font> </b> One paper is accepted by <b>AAMAS 2024</b>! See you in New Zealand. </li>
 		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NeurIPS 2023</b>! See you in USA!  </li>
 		<li> <b> <font color="#FF0000">[2023.07]</font> </b> One paper is accepted by <b>ASE 2023</b> NIER track! </li>
