--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <i>Annual Computer Security Applications Conference</i> (<b>ACSAC</b>),
                 2022.
                 (<b>Technical Track, 15 pages</b>)
-		[<a href="https://dl.acm.org/doi/pdf/10.1145/3564625.3564636" target="_blank">Paper</a>]
+		[<a href="https://github.com/2019ChenGong/2019ChenGong.github.io/blob/main/Files/2022__ACSAC_Curiosity_Driven_Victim_Aware_RL_Attack.pdf" target="_blank">Paper</a>]
                 [<a href="https://github.com/soarsmu/Curiosity_in_Adversarial_Policy" target="_blank">Code</a>]
 		[<a href="https://drive.google.com/file/d/17z3VtCdlFsaf1ITNPji60HTlCYAfyfW8/view?usp=sharing"target="_blank">Slides</a>]
 		(<font color="blue">Artifacts Evaluation: Functional</font>)
