--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+	        <li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper related to "GAN Inversion" is accepted by <b>ICME 2024</b>! See you in Canada. </li>
 		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>IEEE S&P 2024</b>! See you in San Francisco. </li>
 		<li> <b> <font color="#FF0000">[2023.12]</font> </b> One paper is accepted by <b>AAMAS 2024</b>! See you in New Zealand. </li>
 		<li> <b> <font color="#FF0000">[2023.09]</font> </b> One paper is accepted by <b>NeurIPS 2023</b>! See you in USA!  </li>
@@ -168,7 +169,16 @@
                 [<a href="https://arxiv.org/abs/2210.04688" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
                 </li></span>
-            </p>    
+            </p>   
+	    <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> Siyu Xing, <b>Chen Gong</b>, Hewei Guo, Xiaoyu Zhang, Xinwen Hou, Yu Liu.
+                “GAN Inversion for Image Editing via Unsupervised Domain Adaptation”,
+		<i>IEEE International Conference on Multimedia and Expo </i> (<b>ICME</b>),
+		2024.
+		[Acceptance Rate: ??]
+                (To appear)
+                </li></span>
+            </p>  
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
 		Xianjie Zhang, Jiahao Sun, <b>Chen Gong</b>, Kai Wang, Yifei Cao, Hao Chen and Yu Liu, “Mutual Information as Intrinsic Reward of Reinforcement Learning Agents for On-demand Ride Pooling”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
@@ -309,13 +319,6 @@
                 “Recover Triggered States: Protect Model Against Backdoor Attack in Reinforcement Learning”. under review IEEE Conference on Decision and Control (CDC).
 		[<a href="https://arxiv.org/pdf/2304.00252.pdf" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/Spaxilia/Recover-triggered-states" target="_blank">Code</a>]
-                </li></span>
-                </p>  
-		    
-		<p style="text-indent: -1.6rem;margin-left: 0rem;">
-		<span><li> Siyu Xing, <b>Chen Gong</b>*, Hewei Guo, Xiaoyu Zhang, Xinwen Hou, Yu Liu.
-                “Unsupervised Domain Adaptation GAN Inversion for Image Editing”. under review IEEE Transaction on Image Processing.
-		[<a href="https://arxiv.org/pdf/2211.12123.pdf" target="_blank">Arxiv</a>]
                 </li></span>
                 </p>  
 		
