--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 “GAN Inversion for Image Editing via Unsupervised Domain Adaptation”,
 		<i>IEEE International Conference on Multimedia and Expo </i> (<b>ICME</b>),
 		2024.
-		[Acceptance Rate: 31.0\%]
+		[Acceptance Rate: 31.0%]
                 (To appear)
                 </li></span>
             </p>  
