--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2024.04]</font> </b> One paper related to "DP image dataset synthesis" is accepted by <b>USENIX Security 2024</b>! See you in USA </li>
 	        <li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper related to "GAN Inversion" is accepted by <b>ICME 2024</b>! See you in Canada. </li>
 		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>IEEE S&P 2024</b>! See you in San Francisco. </li>
 		<li> <b> <font color="#FF0000">[2023.12]</font> </b> One paper is accepted by <b>AAMAS 2024</b>! See you in New Zealand. </li>
@@ -342,7 +343,7 @@
 	    </A>
 		I'm hourned to (co-)supervise the following students:
 		<ul>
-		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024 (Major revision), S&P 2024. </li>
+		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024, S&P 2024. </li>
                 </ul>
             
 		    
