--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
 	    <font size="3">
             <ul>
 
+
+		    
+	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> Kecen Li*, <b>Chen Gong</b>*, Zhixiang Li, Yuzhong Zhao, Xinwen Hou, Tianhao Wang.
+                “PRIVIMAGE: Differentially Private Synthetic Image Generation using Diffusion Models with Semantic-Aware Pretraining”,
+		<i>33rd USENIX Security Symposium</i> (<b>USENIX Security</b>),
+		2024.
+		[Acceptance Rate in Cycle 3: 70/601=11.6%]
+                [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
+                </li></span>
+            </p>  
 	   <p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> <b>Chen Gong</b>*, Zhou Yang*, Yunpeng Bai, Junda He, Jieke Shi, Kecen Li, Arunesh Sinha, Bowen Xu, Xinwen Hou, David Lo, Tianhao Wang.
                 “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
