--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 “PRIVIMAGE: Differentially Private Synthetic Image Generation using Diffusion Models with Semantic-Aware Pretraining”,
 		<i>33rd USENIX Security Symposium</i> (<b>USENIX Security</b>),
 		2024.
-		[Acceptance Rate in Cycle 3: 70/601=11.6%]
+		[Acceptance Rate: ???]
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
                 </li></span>
