--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </li></span>
             </p>  
 	   <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                <span><li> <b>Chen Gong</b>*, Zhou Yang*, Yunpeng Bai, Junda He, Jieke Shi, Kecen Li, Arunesh Sinha, Bowen Xu, Xinwen Hou, David Lo, Tianhao Wang.
+                <span><li> <b>Chen Gong</b>, Zhou Yang, Yunpeng Bai, Junda He, Jieke Shi, Kecen Li, Arunesh Sinha, Bowen Xu, Xinwen Hou, David Lo, Tianhao Wang.
                 “BAFFLE: Hiding Backdoors in Offline Reinforcement Learning Datasets”,
 		<i>45th IEEE Symposium on Security and Privacy</i> (<b>IEEE S&P</b>),
 		2024.
