--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 		<i>33rd USENIX Security Symposium</i> (<b>USENIX Security</b>),
 		2024.
 		[Acceptance Rate: ???]
+		[Supervised the project]
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
                 </li></span>
@@ -189,6 +190,7 @@
 		<i>IEEE International Conference on Multimedia and Expo </i> (<b>ICME</b>),
 		2024.
 		[Acceptance Rate: 31.0%]
+		[Supervised the project]
                 (To appear)
                 </li></span>
             </p>  
@@ -209,6 +211,7 @@
 		Chao Li, <b>Chen Gong</b>, Qiang He, Xinwen Hou, “Keep Various Trajectories: Promoting Exploration of Ensemble Policies in Continuous Control”,
                 <i>37th Conference on Neural Information Processing Systems </i> (<b>NeurIPS</b>),
                 2023.
+		[Supervised the project]
 		[<a href="https://arxiv.org/abs/2310.11138" target="_blank">Paper</a>]
             </p></li>
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
@@ -222,6 +225,7 @@
 		Chao Li*, <b>Chen Gong*</b>, Qiang He, Xinwen Hou, Yu Liu, “Centralized Cooperative Exploration Policy for Continuous Control Tasks”,
                 <i>International Joint Conference on Autonomous Agents and Multi-agent Systems</i> (<b>AAMAS</b>),
                 2023.
+	        [Supervised the project]
 		[<a href="https://arxiv.org/pdf/2301.02375.pdf" target="_blank">Paper</a>]
 		[<a href="https://github.com/Jincate/CCEP" target="_blank">Code</a>]
                 <!--(<b>Technical Track, 15 pages</b>)
