--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 		[Acceptance Rate: ???]
 		[Supervised the project]
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
+		[<a href="https://dp-image-syn.github.io/privimage/" target="_blank">Project Page</a>]
 		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
                 </li></span>
             </p>  
