--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 		2024.
 		[Acceptance Rate in Cycle 3: 70/601=11.6%]
                 [<a href="https://arxiv.org/abs/2210.04688" target="_blank">Arxiv</a>]
+		[<a href="https://www.computer.org/csdl/proceedings-article/sp/2024/313000a218/1WPcYJ8kPNm" target="_blank">Paper</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
                 </li></span>
             </p>   
