--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
 		[<a href="https://dp-image-syn.github.io/privimage/" target="_blank">Project Page</a>]
 		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
-		[<a href="https://drive.google.com/drive/folders/16-aMiBDTlHdeg1FNlcQXzddw02od7psk" target="_blank">Poster</a>]
+		[<a href="https://drive.google.com/file/d/1qF2jGfD9VrGVHq5QQ18CZtVujMLYnM5h/view?usp=sharing" target="_blank">Poster</a>]
                 </li></span>
             </p>  
 	   <p style="text-indent: -1.6rem;margin-left: 0rem;">
