--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <!-- <A HREF="#News">News</A> | -->
                                 <A HREF="#Bio">Short Bio</A> |
                                 <A HREF="#Education">Education</A> |
-                                <A HREF="#Research Experiences">Research Experiences</A> |
+                                <!--<A HREF="#Research Experiences">Research Experiences</A> |-->
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Awards & Honors">Awards & Honors</A> |
                                 <A HREF="#Services">Services</A>
@@ -129,26 +129,6 @@
             </ul>
             <br />
 
-            
-
-            <A NAME="Research Experiences">
-                <h2>Selected research experiences</h2>
-            </A>
-            <font size="3">
-                <ul>
-
-                    <li>2021.08-2022.09, School of Computing and Information Systems, Singapore Management University, Singapore, Supervisor: Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>
-                     | Adversarial Policy & Reinforcement Learning Testing </li>
-                    <li>2021.02-Now, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
-                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Offline Reinforcement learning, Off-policy evaluation, Convex duality & Generative model </li>
-                    <li>2019.11-2020.12, Institute of Automation, Chinese Academy of Sciences, Beijing, China, Supervisor:
-                    Prof. <a href="https://scholar.google.com/citations?hl=en&user=WFsqZskAAAAJ" target="_blank">Xinwen HOU</a> | Reinforcement learning & Variational inference </li>
-                    <li>2017.12-2019.02, China University of Geosciences, Beijing, China, Supervisor:
-                    Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a> | Machine learning in medicine </li>
-                </ul>
-            </font>
-
-            <br />
 
 
             <A NAME="Publications">
