--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
                     <li> 2022, ACSAC Artifacts Evaluation Committee </li>
 		    <li> IEEE Transactions on Industrial Electronics Reviewer </li>
 		    <li> ACM Transactions on Intelligent Systems and Technology Reviewer </li>
+		    <li> ACM Transactions on Privacy and Security </li>
                 </ul>
                     
                 <!-- map -->   
