--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 		[<a href="https://www.computer.org/csdl/proceedings-article/sp/2024/313000a218/1WPcYJ8kPNm" target="_blank">Paper</a>]
 		[<a href="https://github.com/2019ChenGong/Offline_RL_Poisoner/tree/review" target="_blank">Code</a>]
 		[<a href="https://drive.google.com/file/d/1qF2jGfD9VrGVHq5QQ18CZtVujMLYnM5h/view?usp=sharing" target="_blank">Poster</a>]
+		[<a href="https://drive.google.com/file/d/1xA2RUjwvdSt-L0hs2CzW_xYvhiro_2Xu/view?usp=sharing" target="_blank">Slides</a>]
                 </li></span>
             </p>   
 	    <p style="text-indent: -1.6rem;margin-left: 0rem;">
