--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 		2024.
 		[Acceptance Rate: 31.0%]
 		[Supervised the project]
-                (To appear)
+                [<a href="https://arxiv.org/abs/2211.12123" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/Hsingsiyu/UDA-inversion" target="_blank">Code</a>]
                 </li></span>
             </p>  
             <p style="text-indent: -1.6rem;margin-left: 0rem;"><li>
