--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2024.06]</font> </b> One paper related to "DP data stream release" has been accepted, and another paper related to "Machine unlearning" has received a major revision from <b>NDSS 2024</b>! See you in San Francisco, USA! </li>
 		<li> <b> <font color="#FF0000">[2024.04]</font> </b> One paper related to "DP image dataset synthesis" is accepted by <b>USENIX Security 2024</b>! See you in Philadelphia, PA, USA! </li>
 	        <li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper related to "GAN Inversion" is accepted by <b>ICME 2024</b>! See you in Canada. </li>
 		<li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper is accepted by <b>IEEE S&P 2024</b>! See you in San Francisco. </li>
@@ -142,7 +143,20 @@
             <ul>
 
 
-		    
+	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> Xiaochen Li, Zhan Qin, Kui Ren, <b>Chen Gong</b>, Shuya Feng, Yuan Hong, Tianhao Wang.
+                “Delay-allowed Differentially Private Data Stream Release”,
+		<i>Network and Distributed System Security Symposium </i> (<b>NDSS</b>),
+		2025.
+		[Acceptance Rate: ???]
+		(To appear)
+		<!--
+                [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
+		[<a href="https://dp-image-syn.github.io/privimage/" target="_blank">Project Page</a>]
+		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
+		--> 
+                </li></span>
+          </p>      
 	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> Kecen Li*, <b>Chen Gong</b>*, Zhixiang Li, Yuzhong Zhao, Xinwen Hou, Tianhao Wang.
                 “PRIVIMAGE: Differentially Private Synthetic Image Generation using Diffusion Models with Semantic-Aware Pretraining”,
