--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
 	    </A>
 		I'm hourned to (co-)supervise the following students:
 		<ul>
-		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024, S&P 2024. </li>
+		    <li> Kecen Li, a Master Student at CASIA, working on differential private images synthesis, publication: USENIX Security 2024, S&P 2024, NDSS 2025 (Major revision). </li>
+		    <li> Zheng Liu, a Master Student at CASIA, working on differential private code synthesis. </li>
                 </ul>
             
 		    
