--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2024.06]</font> </b> One paper related to "LMM captioning" has been accepted by <b>ECCV 2024</b>! See you in Milano, Italy! </li>
 		<li> <b> <font color="#FF0000">[2024.06]</font> </b> One paper related to "DP data stream release" has been accepted, and another paper related to "Machine unlearning" has received a major revision from <b>NDSS 2025</b>! See you in San Francisco, USA! </li>
 		<li> <b> <font color="#FF0000">[2024.04]</font> </b> One paper related to "DP image dataset synthesis" is accepted by <b>USENIX Security 2024</b>! See you in Philadelphia, PA, USA! </li>
 	        <li> <b> <font color="#FF0000">[2024.03]</font> </b> One paper related to "GAN Inversion" is accepted by <b>ICME 2024</b>! See you in Canada. </li>
@@ -142,7 +143,17 @@
 	    <font size="3">
             <ul>
 
-
+	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> Yuzhong Zhao, Yue Liu, Zonghao Guo, Weijia Wu, <b>Chen Gong</b>, Fang Wan, Qixiang Ye.
+                “ControlCap: Controllable Region-level Captioning”,
+		<i>The European Conference on Computer Vision </i> (<b>ECCV</b>),
+		2024.
+		[Acceptance Rate: ???]
+		(To appear)
+                [<a href="https://arxiv.org/abs/2401.17910" target="_blank">Arxiv</a>]
+		[<a href="https://github.com/callsys/ControlCap" target="_blank">Code</a>]
+                </li></span>
+          </p>
 	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> Xiaochen Li, Zhan Qin, Kui Ren, <b>Chen Gong</b>, Shuya Feng, Yuan Hong, Tianhao Wang.
                 “Delay-allowed Differentially Private Data Stream Release”,
