--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
                 “ControlCap: Controllable Region-level Captioning”,
 		<i>The European Conference on Computer Vision </i> (<b>ECCV</b>),
 		2024.
-		[Acceptance Rate: ???]
-		(To appear)
+		[Acceptance Rate: 2395/8585=27.9%]
                 [<a href="https://arxiv.org/abs/2401.17910" target="_blank">Arxiv</a>]
 		[<a href="https://github.com/callsys/ControlCap" target="_blank">Code</a>]
                 </li></span>
