--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 “PRIVIMAGE: Differentially Private Synthetic Image Generation using Diffusion Models with Semantic-Aware Pretraining”,
 		<i>33rd USENIX Security Symposium</i> (<b>USENIX Security</b>),
 		2024.
-		[Acceptance Rate: ???]
+		[Acceptance Rate: 256/1414=18.0%]
 		[Supervised the project]
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
 		[<a href="https://dp-image-syn.github.io/privimage/" target="_blank">Project Page</a>]
