--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h2>News</h2>
             </A>
             <ul>
+		<li> <b> <font color="#FF0000">[2024.08]</font> </b> One paper related to "DP network dataset synthesis" has been accepted by <b>IMC 2024</b>! See you in Centro, Spain! </li>
 		<li> <b> <font color="#FF0000">[2024.06]</font> </b> One paper related to "LMM captioning" has been accepted by <b>ECCV 2024</b>! See you in Milano, Italy! </li>
 		<li> <b> <font color="#FF0000">[2024.06]</font> </b> One paper related to "DP data stream release" has been accepted, and another paper related to "Machine unlearning" has received a major revision from <b>NDSS 2025</b>! See you in San Francisco, USA! </li>
 		<li> <b> <font color="#FF0000">[2024.04]</font> </b> One paper related to "DP image dataset synthesis" is accepted by <b>USENIX Security 2024</b>! See you in Philadelphia, PA, USA! </li>
@@ -143,6 +144,20 @@
 	    <font size="3">
             <ul>
 
+	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
+                <span><li> Danyu Sun, Joann Qiongna Chen, <b>Chen Gong</b>, Tianhao Wang， Zhou Li.
+                “NetDPSyn: Synthesizing Network Traces under Differential Privacy”,
+		<i>ACM Internet Measurement Conference </i> (<b>IMC</b>),
+		2024.
+		[Acceptance Rate: ???]
+		(To appear)
+		<!--
+                [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
+		[<a href="https://dp-image-syn.github.io/privimage/" target="_blank">Project Page</a>]
+		[<a href="https://github.com/SunnierLee/DP-ImaGen" target="_blank">Code</a>]
+		--> 
+                </li></span>
+          </p>      
 	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
                 <span><li> Yuzhong Zhao, Yue Liu, Zonghao Guo, Weijia Wu, <b>Chen Gong</b>, Fang Wan, Qixiang Ye.
                 “ControlCap: Controllable Region-level Captioning”,
