--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <ul>
 
 	  <p style="text-indent: -1.6rem;margin-left: 0rem;">
-                <span><li> Danyu Sun, Joann Qiongna Chen, <b>Chen Gong</b>, Tianhao Wang， Zhou Li.
+                <span><li> Danyu Sun, Joann Qiongna Chen, <b>Chen Gong</b>, Tianhao Wang, Zhou Li.
                 “NetDPSyn: Synthesizing Network Traces under Differential Privacy”,
 		<i>ACM Internet Measurement Conference </i> (<b>IMC</b>),
 		2024.
