--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 “NetDPSyn: Synthesizing Network Traces under Differential Privacy”,
 		<i>ACM Internet Measurement Conference </i> (<b>IMC</b>),
 		2024.
-		[Acceptance Rate: ???]
+		[Acceptance Rate: 21.7%]
 		(To appear)
 		<!--
                 [<a href="https://arxiv.org/abs/2311.12850" target="_blank">Arxiv</a>]
