--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 		Prof. <a href="https://scholar.google.com/citations?user=Ra4bt-oAAAAJ&hl=zh-CN" target="_blank">David Lo</a>, <a href="https://yangzhou6666.github.io/" target="_blank">Zhou Yang</a> and <a href="https://jiekeshi.github.io/" target="_blank">Jieke Shi</a>. 
 	    In 2020.06, I obtained my Bachelor's degree from the School of Information Engineering, China University of Geosciences, Beijing, where I worked with Prof. <a href="https://dblp.org/pid/57/9704.html" target="_blank">Yunyun Niu</a>. -->
         I obtained my Bachelor's degree from Southeast University (SEU), majoring in Information Management and Information Systems (IS). I further pursued a Master's degree in the Computer Science department at SEU, focusing on Software Engineering. 
-        Currently, I have two years of work experience at Sangfor, a network security company. I focus on the following research topics: Reinforcement Learning; Machine Learning; Data Privacy.
+        Currently, I have two years of work experience at Sangfor, a network security company. <br>
+        I focus on the following research topics: Reinforcement Learning; Machine Learning; Data Privacy.
             <br />
 
 
@@ -97,19 +98,19 @@
             <ul>
 		<li>2025.01-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp Ph.D. student in Department of Computer Science, XXX.
                     	<br>
-                    	Supervisor:
-                    	Prof. <a href="https://scholar.google.com/" target="_blank">XXX</a> </li>
+                    	Supervisor: Prof. <a href="https://scholar.google.com/" target="_blank">XXX</a> </li>
                 <li>2018.09-2021.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
                         href="https://www.smu.edu.sg/" target="_blank">School of Computer Science and Engineering</a>, <a
                         href="https://www.cas.cn/" target="_blank">Southeast University, China</a>.
                     	<br>
-                    	Supervisor:
-                    Prof. <a href="https://scholar.google.com" target="_blank">Hongbing Wang</a> </li>
-                <li>2014.09-2018.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
+                    	Supervisor: Prof. <a href="https://scholar.google.com" target="_blank">Hongbing Wang</a> </li>
+                        <br>
+			            Major: Software Engineering
+                <li>2014.09-2018.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
                         href="https://sie.cugb.edu.cn/" target="_blank">School of Economics and Management</a>, <a
                         href="https://www.cugb.edu.cn/" target="_blank">Southeast University, China</a>. 
-			<br>
-			Major: Computer science and technology 
+			            <br>
+			            Major: Information Management and Systems
                 </li>
             </ul>
             <br />
@@ -214,7 +215,7 @@
 		<p> <center>	
 		<!-- height:400px; -->
 		<div style="margin:10px auto=; width:500px; pointer-events: none;">
-		<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qY3Bgki4NYEgyitVrC3jSPfVoDx0c-umOUQwS6ttwII&cl=ffffff&w=a"></script>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=yfDgfwl4y3Eiz2zz1X1zevdVpibO_Y1skA7e1UyuF1U&cl=ffffff&w=a"></script>
 		</div>
 		</p> </center>
 	<br>			                  
