--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                         href="https://www.smu.edu.sg/" target="_blank">School of Computer Science and Engineering</a>, <a
                         href="https://www.cas.cn/" target="_blank">Southeast University, China</a>.
                     	<br>
-                    	Supervisor: Prof. <a href="https://scholar.google.com" target="_blank">Hongbing Wang</a> </li>
+                    	Supervisor: Prof. <a href="https://scholar.google.com" target="_blank">Hongbing Wang</a>
                         <br>
-			            Major: Software Engineering
+			            Major: Software Engineering </li>
                 <li>2014.09-2018.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
                         href="https://sie.cugb.edu.cn/" target="_blank">School of Economics and Management</a>, <a
                         href="https://www.cugb.edu.cn/" target="_blank">Southeast University, China</a>. 
