Init personal github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="keywords"
-        content="Pengjun Hou, 侯鹏君, Reinforcement Learning, Data Privacy">
+        content="Pengjun Hou, 侯鹏君, Reinforcement Learning, IoT, Digital Twins, World Model">
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/ai.png">
@@ -49,12 +49,12 @@
                                 <br />
                                 <br />
 
-                                Email: ystian2018@gmail.com
+                                Email: ystian2018@gmail.com | peh324@lehigh.edu
                                 <br />
                                
                                 [<a href="./Files/Pengjun_Hou_en_CV.pdf" target="_blank">CV</a>]
-                                [<a href="https://scholar.google.com"target="_blank">Google scholar</a>]
-                                [<a href="https://github.com/Hmarkey"target="_blank">Github</a>]
+                                [<a href="https://scholar.google.com/citations?user=df3RPO0AAAAJ&hl" target="_blank">Google scholar</a>]
+                                [<a href="https://github.com/PengjunHou" target="_blank">Github</a>]
                                 [<a href="https://www.zhihu.com/people/" target="_blank">Zhihu</a>]
 
                                 <!-- [<a href="./Files/weixin.jpg" target="_blank">
@@ -96,19 +96,19 @@
                 <h2>Education</h2>
             </A>
             <ul>
-		<li>2025.01-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp Ph.D. student in Department of Computer Science, XXX.
+		<li>2025.01-Now &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp Ph.D. student in Department of Computer Science, Lehigh University.
                     	<br>
-                    	Supervisor: Prof. <a href="https://scholar.google.com/" target="_blank">XXX</a> </li>
+                    	Supervisor: Prof. <a href="https://mushu135.github.io/" target="_blank">Mushu Li</a> </li>
                 <li>2018.09-2021.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; M.A. in <a
-                        href="https://www.smu.edu.sg/" target="_blank">School of Computer Science and Engineering</a>, <a
-                        href="https://www.cas.cn/" target="_blank">Southeast University, China</a>.
+                        href="https://cs.seu.edu.cn/" target="_blank">School of Computer Science and Engineering</a>, <a
+                        href="https://www.seu.edu.cn/" target="_blank">Southeast University, China</a>.
                     	<br>
                     	Supervisor: Prof. <a href="https://scholar.google.com" target="_blank">Hongbing Wang</a>
                         <br>
 			            Major: Software Engineering </li>
                 <li>2014.09-2018.06 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B.E. in <a
-                        href="https://sie.cugb.edu.cn/" target="_blank">School of Economics and Management</a>, <a
-                        href="https://www.cugb.edu.cn/" target="_blank">Southeast University, China</a>. 
+                        href="https://em.seu.edu.cn/" target="_blank">School of Economics and Management</a>, <a
+                        href="https://www.seu.edu.cn/" target="_blank">Southeast University, China</a>. 
 			            <br>
 			            Major: Information Management and Systems
                 </li>
